--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <script src="lib/AStar.js"></script>
     <script src="phaser/phaser.min.js"></script>
+    <script src="lib/phaser-navmesh.min.js"></script>
+    <script src="lib/lodash.js"></script>
     <script src="Boot.js"></script>
     <script src="Load.js"></script>
     <script src="Menu.js"></script>
