Classe Item + Teletransporte
Level.js---------------------
KeyObj1 ---> Botão para teste de teletransporte de  Quarto
-----------------------------

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="Player.js"></script>
     <script src="Enemy.js"></script>
     <script src="Pause.js"></script>
+    <script src="item.js"></script>
 <script>
 
         /**
