Hud + Abrir portas ( Colisão)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="level.js"></script>
     <script src="Player.js"></script>
     <script src="Enemy.js"></script>
+    <script src="Menu.js"></script>
     <script src="Pause.js"></script>
     <script src="item.js"></script>
 <script>
@@ -37,7 +38,9 @@
              */
             constructor(config) {
                 super(config);
+                
                 this.scene.add('jogo', Jogo, true);
+                this.scene.add('menu', Menu, false);
                 this.scene.add('pause', Pause, false);//adiciona cena
             }
         }
