--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     <script src="Pause.js"></script>
     <script src="item.js"></script>
     <script src="Menu.js"></script>
-    <script src="GameOver.js"></script>
 <script>
 
         /**
@@ -39,12 +38,9 @@
              */
             constructor(config) {
                 super(config);
-
-                this.scene.add('menu', Menu, false);
-                this.scene.add('jogo', Jogo, true);
-
+                this.scene.add('menu', Menu, true);
+                this.scene.add('jogo', Jogo, false);
                 this.scene.add('pause', Pause, false);//adiciona cena
-                this.scene.add('gameover', GameOver ,false);
             }
         }
 
