--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="Pause.js"></script>
     <script src="item.js"></script>
     <script src="Menu.js"></script>
+    <script src="GameOver.js"></script>
 <script>
 
         /**
@@ -38,6 +39,7 @@
              */
             constructor(config) {
                 super(config);
+                this.scene.add('gameover', GameOver, false);
                 this.scene.add('menu', Menu, true);
                 this.scene.add('jogo', Jogo, false);
                 this.scene.add('pause', Pause, false);//adiciona cena
@@ -46,7 +48,7 @@
 
         // Start the game.
         let game = new Game(config);
-
+ 
     </script>
    
     
