Tutorial + Game_Over

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="item.js"></script>
     <script src="Menu.js"></script>
     <script src="GameOver.js"></script>
+    <script src="Tutorial.js"></script>
 <script>
 
         /**
@@ -43,6 +44,7 @@
                 this.scene.add('menu', Menu, true);
                 this.scene.add('jogo', Jogo, false);
                 this.scene.add('pause', Pause, false);//adiciona cena
+                this.scene.add('tutorial', Tutorial, false);
             }
         }
 
