--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="Player.js"></script>
     <script src="Enemy.js"></script>
     <script src="Pause.js"></script>
+    <script src="Descricao.js"></script>
     <script src="item.js"></script>
     <script src="Menu.js"></script>
     <script src="GameOver.js"></script>
@@ -45,6 +46,7 @@
                 this.scene.add('jogo', Jogo, true);
                 this.scene.add('pause', Pause, false);//adiciona cena
                 this.scene.add('tutorial', Tutorial, false);
+                this.scene.add('desc', Descricao, false);
             }
         }
 
