--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
              */
             constructor(config) {
                 super(config);
-                this.scene.add('gameover', GameOver, false);
                 this.scene.add('menu', Menu, false);
-                this.scene.add('jogo', Jogo, true);
+                this.scene.add('jogo', Jogo, false);
                 this.scene.add('pause', Pause, false);//adiciona cena
                 this.scene.add('tutorial', Tutorial, false);
                 this.scene.add('desc', Descricao, false);
+                this.scene.add('gameover', GameOver, true);
             }
         }
 
